# InstantCoffee

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  lib.rs  test_utils.rs
