[package]
name = "instantcoffee"
version = "0.1.0"
edition = "2021"
authors = ["Will Buik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["config", "reexport"]
config = []
reexport = []

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.17", features = ["fs"] }

[dev-dependencies]
tokio = { version = "~1.17", features = ["macros", "rt"] }
